# arcs

./: .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_api  LICENSE  README.md  devenv.nix  mkdocs.yml  pyproject.toml  radixconfig.yaml  setup.py
.github/workflows/: docs.yaml  test.yaml
api/: app.py  authentication.py
app/: arcs_app.py
arcs/: analysis.py  analysis_functions.py  model.py  plotting.py  reactions.py  reactions_2.py  setup_functions.py  traversal.py  traversal_2.py
arcs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
arcs/.ipynb_checkpoints/: analysis-checkpoint.py  analysis_functions-checkpoint.py  plotting-checkpoint.py  reactions-checkpoint.py  reactions_2-checkpoint.py  setup_functions-checkpoint.py  traversal-checkpoint.py
arcs/arcs-dash/: server.py
arcs/dash_app/: __init__.py  __main__.py  server.py  server_2.py
dash-app/: arcs.py  arcs_app.py  dashapp-gen2.py  dashapp-gen3.py  main.py
dash-app/.ipynb_checkpoints/: dashapp-2-checkpoint.py  dashapp-checkpoint.py  dashapp-gen2-checkpoint.py  dashapp-sliders-load-checkpoint.py  sandbox-checkpoint.ipynb  test-checkpoint.py
dash-app/assets/: dashapp-gen3.py  style.css
dash-app/data/: SCAN_graph.p  SCAN_reactions.p
dashapp/: .dashapp-sliders-load.py.swp  dashapp-sliders-load.py
docs/: index.md
model/: dataset.nc
model/T200_P1/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P10/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P100/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P125/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P15/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P150/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P175/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P2/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P20/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P200/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P225/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P25/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P250/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P275/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P30/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P300/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P35/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P40/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P45/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P5/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T200_P50/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T250_P1/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T250_P10/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T250_P100/: graph.p  reactions.p  table-rank_small_reactions_higher.p  table.p
model/T250_P125/: graph.p  table.p  (+2 more)
notebooks/: arcs_sample.ipynb  arcs_sample.py
tests/: test_analysis.py  test_endpoints.py  test_model.py  test_model_dataset.py  test_snapshot.py
(+335 files in other folders)
