[tool.poetry]
name = "arcs"
version = "1.5.0"
description = "Automated reactions for CO2 storage"
authors = [
  "CCS Data & Digital Team <fg_CCS_Data_Digital@equinor.com>",
  "Benjamin A. D. Williamson <benjamin.williamson@ntnu.no>",
]
license = "MIT"
readme = "README.md"
classifiers=[
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Development Status :: 3 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Industry",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Topic :: Other/Nonlisted Topic",
  "Topic :: Scientific/Engineering",
]

[tool.poetry.urls]
"repository" = "https://github.com/equinor/arcs"
"documentation" = "https://github.com/equinor/arcs"
"Bug Tracker" = "https://github.com/equinor/arcs/issues"

[tool.poetry.dependencies]
python = "^3.10"
ase = "^3.23.0"
pymatgen = "^2024.10.3"
scipy = "^1.14.1"
numpy = "^2.1.2"
chempy = "^0.9.0"
tqdm = "^4.66.5"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.1"
pytest-snapshot = "^0.9.0"
mypy = "^1.14.1"
types-tqdm = "^4.67.0.20241221"
types-psutil = "^6.1.0.20241221"
pandas-stubs = "^2.2.3.241126"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
  "chempy",
  "chempy.equilibria",
  "networkx",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
